--- a/pom.xml
+++ b/pom.xml
@@ -171,7 +171,7 @@
 		</dependency>
 		<!-- <dependency> <groupId>com.google.code.gson</groupId> <artifactId>gson</artifactId> 
 			<version>2.2.2-atlassian-1</version> </dependency> -->
-		<dependency>
+<!-- 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
 			<version>2.7.4</version>
@@ -182,11 +182,11 @@
 			<artifactId>jackson-annotations</artifactId>
 			<version>2.7.4</version>
 		</dependency>
-
+ -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.7.4</version>
+			<version>2.14.0</version>
 		</dependency>
 
 		<dependency>
