--- a/pom.xml
+++ b/pom.xml
@@ -252,12 +252,18 @@
 
 
 	<!-- https://mvnrepository.com/artifact/net.sf.json-lib/json-lib -->
-	<dependency>
+<!-- 	<dependency>
         <groupId>net.sf.json-lib</groupId>
         <artifactId>json-lib</artifactId>
         <version>2.4</version>
         <classifier>jdk15</classifier>
-    </dependency>
+    </dependency> -->
+		<!-- https://mvnrepository.com/artifact/commons-collections/commons-collections -->
+<dependency>
+    <groupId>commons-collections</groupId>
+    <artifactId>commons-collections</artifactId>
+    <version>3.2.2</version>
+</dependency>
 	<!--<dependency>
 			<groupId>org.apache.struts</groupId>
 			<artifactId>struts2-core</artifactId>
