--- a/pom.xml
+++ b/pom.xml
@@ -284,11 +284,17 @@
 			<artifactId>xmlsec</artifactId>
 			<version>3.0.0</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/commons-httpclient/commons-httpclient -->
+<!--		&lt;!&ndash; https://mvnrepository.com/artifact/commons-httpclient/commons-httpclient &ndash;&gt;-->
+<!--		<dependency>-->
+<!--			<groupId>commons-httpclient</groupId>-->
+<!--			<artifactId>commons-httpclient</artifactId>-->
+<!--			<version>3.0.1</version>-->
+<!--		</dependency>-->
+		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
 		<dependency>
-			<groupId>commons-httpclient</groupId>
-			<artifactId>commons-httpclient</artifactId>
-			<version>3.0.1</version>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.14</version>
 		</dependency>
 
 
