--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 		<bamboo.data.version>9.3.3</bamboo.data.version>
 		<amps.version>8.1.2</amps.version>
 		<plugin.testrunner.version>2.0.2</plugin.testrunner.version>
-		<spring.version>4.2.5.RELEASE</spring.version>
+		<spring.version>5.3.20</spring.version>
 		<osgi.javaconfig.version>0.2.0</osgi.javaconfig.version>
 		<atlassian.plugin.key>${project.groupId}.${project.artifactId}</atlassian.plugin.key>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -313,7 +313,7 @@
 		<dependency>
 			<groupId>org.apache.santuario</groupId>
 			<artifactId>xmlsec</artifactId>
-			<version>3.0.1</version>
+			<version>3.0.3</version>
 			<exclusions>
 				<exclusion>
 					<groupId>commons-codec</groupId>
@@ -367,12 +367,6 @@
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>2.15.1</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-collections4</artifactId>
-			<version>4.4</version>
 			<scope>provided</scope>
 		</dependency>
 
